--- a/Skills.html
+++ b/Skills.html
@@ -1,26 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!--Using Bootstrap-->
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tech Titans</title>
-  <style>
-    #background-img{
-      background-image: url(thought.jpg);
-      height: 100vh;
-      width: 100%;
-      background-size: cover;
-      background-position: center;
-    }
-  </style>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Skills</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
-</head>
-
-<body style="background-color: green;margin: 0;">
+<body style="background-color: green;">
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">Tech Titans</a>
@@ -31,13 +18,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link " href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="Hobbies.html">Hobbies</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Skills.html">Skills</a>
+            <a class="nav-link active" aria-current="page" href="Skills.html">Skills</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="goals.html">Goals</a>
@@ -46,11 +33,7 @@
       </div>
     </div>
   </nav>
-  <p class="fs-1", style="text-align: center;color: black;">My famous Motivational Thought</p>
-  <hr/>
-  
-  <div id="background-img"></div>
-
+  <h1 class="text-center">Skills</h1>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
     crossorigin="anonymous"></script>
@@ -58,5 +41,4 @@
     integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y"
     crossorigin="anonymous"></script>
 </body>
-
 </html>
