--- a/goals.html
+++ b/goals.html
@@ -5,22 +5,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tech Titans</title>
-  <style>
-    #background-img{
-      background-image: url(thought.jpg);
-      height: 100vh;
-      width: 100%;
-      background-size: cover;
-      background-position: center;
-    }
-  </style>
+  <title>Hobbies</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 </head>
 
-<body style="background-color: green;margin: 0;">
+<body style="background-color: green;">
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">Tech Titans</a>
@@ -31,7 +22,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="Hobbies.html">Hobbies</a>
@@ -40,17 +31,13 @@
             <a class="nav-link" href="Skills.html">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="goals.html">Goals</a>
+            <a class="nav-link active"  aria-current="page" href="goals.html">Goals</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-  <p class="fs-1", style="text-align: center;color: black;">My famous Motivational Thought</p>
-  <hr/>
-  
-  <div id="background-img"></div>
-
+  <h1 class="text-center">Goals</h1>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
     crossorigin="anonymous"></script>
