--- a/goals.html
+++ b/goals.html
@@ -11,7 +11,7 @@
 </head>
 </head>
 
-<body style="background-color: green;">
+<body style="background-color: #00fa9a;">
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">Tech Titans</a>
@@ -28,9 +28,6 @@
             <a class="nav-link" href="Hobbies.html">Hobbies</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Skills.html">Skills</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link active"  aria-current="page" href="goals.html">Goals</a>
           </li>
         </ul>
@@ -38,6 +35,8 @@
     </div>
   </nav>
   <h1 class="text-center">Goals</h1>
+  <hr/>
+  <h1 class="text-center">My Goal is To Become Best Software Developer and Earn a Nice Job</h1>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
     crossorigin="anonymous"></script>
