--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 </head>
 
-<body style="background-color: green;margin: 0;">
+<body style="background-color: #00fa9a;margin: 0;">
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">Tech Titans</a>
@@ -31,17 +31,15 @@
             <a class="nav-link" href="Hobbies.html">Hobbies</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Skills.html">Skills</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="goals.html">Goals</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-  <p class="fs-1", style="text-align: center;color: black;">My famous Motivational Thought</p>
+  <p class="fs-2", style="text-align: center;color: black;">My Favorite Motivational Thought</p>
   <hr/>
+  <h1 style="text-align: center; color: black;">EVERYBODY IS A GENIUS. BUT IF YOU JUDGE A FISH BY ITS ABILITY TO CLIMB A TREE, IT WILL LIVE ITS WHOLE LIFE BELIEVING THAT IT IS STUPID</h1><h2 style="text-align: center; color: black;"><i>~Albert Einstein</i></h2>
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
